# rust_embed_web

./: BUILD.md  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  env_example
src/: main.rs
