[package]
name = "rust_embed_web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = [
    "trace",
    "compression-br",
    "compression-gzip",
] }
mime_guess = "2"
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }
http = "1"
hyper = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2"
anyhow = "1"
